<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/mainScroll_saf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_saf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".activities.forms.saf_page1"
            tools:layout_editor_absoluteY="1dp">


            <TextView
                android:id="@+id/SAF_instructions"
                android:layout_width="375dp"
                android:layout_height="70dp"
                android:layout_marginTop="104dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/instructions"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SAF_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/SAFTitle"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="61dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sti_logo" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="461dp"
                android:layout_height="11dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/line" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:color="#767676"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.958"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gear_solid" />

            <EditText
                android:id="@+id/application_date_saf1"
                android:layout_width="240dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/application_date"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <EditText
                android:id="@+id/campus"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="257dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/campus"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/application_date_saf1" />

            <EditText
                android:id="@+id/scholarship_title_saf1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="257dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/title_of_scholarship"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trt" />

            <EditText
                android:id="@+id/term"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="257dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/term"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scholarship_title_saf1" />

            <EditText
                android:id="@+id/ac_year_saf1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="257dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/academic_year"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/term" />

            <EditText
                android:id="@+id/track_saf1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="374dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/preferred_program_track_strand_specialization"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campus" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/level"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/track_saf1" />

            <TextView
                android:id="@+id/shs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/senior_high_school"
                android:textColor="@color/gray"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/level" />

            <TextView
                android:id="@+id/trt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tertiary"
                android:textColor="@color/gray"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/shs" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="33dp"
                android:layout_height="24dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/level"
                app:srcCompat="@drawable/square_regular" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="33dp"
                android:layout_height="24dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:srcCompat="@drawable/square_regular" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="52dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ac_year_saf1"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/next_saf1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/yellow"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/dark_yellow"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ac_year_saf1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
